fix: made toolbar static and removed scrollbars

--- a/extensions/src/platform-scripture-editor/src/_editor-overrides.scss
+++ b/extensions/src/platform-scripture-editor/src/_editor-overrides.scss
@@ -11,6 +11,8 @@
   overflow-y: auto;
   flex-grow: 1;
   margin: 0;
+  // Adds a margin offset for the toolbar
+  margin-top: 53px;
 
   // remove rounded top corners to look better in tabs
   .toolbar {
